examples/errors/error_values.molt
import "std:collections" as c
import "std:errors"
import "std:io"
import "std:meta"

err = errors.error(
  "missing file",
  record { path: "note.txt" },
)
io.print(meta.type(err))
io.print(err.message)
io.print(err.data.path)
io.print(c.keys(err))
io.print(meta.show(err))
